# claude-impact-rio-acsuporte

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  INSTRUCOES_CLAUDE_CODE.md  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini
alembic/: env.py
app/: auditoria.py  config.py  crypto.py  main.py  observabilidade.py
app/bot/: auth.py  comandos.py  fsm.py  handlers.py  historico.py  webhook.py
app/llm/: cliente.py  fallback.py  gerador_lista.py  prompts.py
app/models/: __init__.py  auditoria.py  base.py  chat_history.py  crianca.py  equipe.py  fila_reposicao.py  gestor.py  lista_sugestoes.py  profissional.py  visita.py
app/motor/: constants.py  deduplicacao.py  priorizador.py  regras.py
app/schedulers/: batch_manha.py  batch_noite.py  limpeza_historico.py  scheduler.py
docs/: PRD_v3.0.md
docs/adr/: 001-monolito-vs-microservicos.md  002-apscheduler-vs-celery.md  003-criptografia-fernet.md  004-fsm-transitions-lib.md
docs/architecture/: arquitetura.md  decisoes_design.md  plano_implementacao.md
scripts/: demo.py  limpar_db.py  seed.py
tests/: conftest.py
tests/e2e/: test_ciclo_diario.py  test_escalonamento_risco.py  test_pendentes_no_topo.py
tests/integration/: test_batch_manha.py  test_batch_noite.py  test_batch_noite_idempotencia.py  test_bot_historico.py  test_bot_webhook.py  test_chat_history_retencao.py  test_db_connection.py  test_limpar_historico.py  test_llm_cliente.py  test_models_constraints.py  test_seed.py
tests/unit/: test_bot_fsm.py  test_config.py  test_crypto.py  test_llm_fallback.py  (+4 more)
